--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,13 @@
 </head>
 
 <body> Contact list
+	<form>
+		First name<br>
+		<input type="text" name="firstname">
+		<br>
+		Lastname<br>
+		<input type="text" name="lastname">
+	</form>
 
 </body>
 
