Add Button Contact Page

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
 		<input type="text" name="lastname">
 	</form>
 
+	<button type="submit" form="nameform" value="Submit">Submit</button>	
+
 </body>
 
 </html>
